{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 188,
  "lineage": "84922f40-ecfa-a63d-253c-f0e650369670",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elk_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff91eb5c6fe7cc86",
            "arn": "arn:aws:ec2:ap-south-1:801822495145:instance/i-04803668ac000c48e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04803668ac000c48e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "pawan-elk-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0675b9023b9dadf24",
            "private_dns": "ip-10-0-1-60.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "public_dns": "ec2-3-108-220-8.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.220.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b2d89e8183f1c5e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031e2eb78cf337cc8",
            "tags": {
              "Name": "elk-server"
            },
            "tags_all": {
              "Name": "elk-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4cd41ba9873ae69"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.elk_sg",
            "aws_subnet.elk_public_subnet",
            "aws_vpc.elk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "elk_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:801822495145:internet-gateway/igw-07a39b95015ad9ed3",
            "id": "igw-07a39b95015ad9ed3",
            "owner_id": "801822495145",
            "tags": {
              "Name": "elk-igw"
            },
            "tags_all": {
              "Name": "elk-igw"
            },
            "vpc_id": "vpc-0c7e04821ff718f18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.elk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elk_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:801822495145:route-table/rtb-01e29a7576bf38bbf",
            "id": "rtb-01e29a7576bf38bbf",
            "owner_id": "801822495145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a39b95015ad9ed3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elk-public-rt"
            },
            "tags_all": {
              "Name": "elk-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7e04821ff718f18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.elk_igw",
            "aws_vpc.elk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elk_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f6cb92efa8ac50f",
            "route_table_id": "rtb-01e29a7576bf38bbf",
            "subnet_id": "subnet-031e2eb78cf337cc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.elk_igw",
            "aws_route_table.elk_public_rt",
            "aws_subnet.elk_public_subnet",
            "aws_vpc.elk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:801822495145:security-group/sg-0b4cd41ba9873ae69",
            "description": "Allow SSH and ELK ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4cd41ba9873ae69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Elasticsearch",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kibana",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "elk-sg",
            "name_prefix": "",
            "owner_id": "801822495145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elk-sg"
            },
            "tags_all": {
              "Name": "elk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7e04821ff718f18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.elk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elk_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:801822495145:subnet/subnet-031e2eb78cf337cc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031e2eb78cf337cc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801822495145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elk-public-subnet"
            },
            "tags_all": {
              "Name": "elk-public-subnet"
            },
            "vpc_id": "vpc-0c7e04821ff718f18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.elk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "elk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:801822495145:vpc/vpc-0c7e04821ff718f18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc0cd6281578563f",
            "default_route_table_id": "rtb-0602f70e62dd70b7e",
            "default_security_group_id": "sg-00fc12e83513c0627",
            "dhcp_options_id": "dopt-01704945f713487c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7e04821ff718f18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0602f70e62dd70b7e",
            "owner_id": "801822495145",
            "tags": {
              "Name": "elk-vpc"
            },
            "tags_all": {
              "Name": "elk-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}